--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="btnSearchDesafio2">search</string>
     <string name="txtDesafio1">Desafio 1</string>
     <string name="txtDesafio2">desafio 2</string>
+    <string name="txtDesafio3">DESAFIO 3</string>
 </resources>
